# BowlingGameKata

./: CMakeLists.txt  main.cpp  readme.md
.github/workflows/: ci.yml
src/: Frame.cpp  Frame.hpp  bonus.cpp  bonus.hpp  bowling_game.cpp  bowling_game.hpp  errors.hpp  frame_counter.cpp  frame_counter.hpp
test/: random_fuzz_utils.hpp  test_bonus.cpp  test_bonus_ctor.cpp  test_frame.cpp  test_frame_counter.cpp  test_frame_counter_bonus.cpp  test_frame_counter_completeness.cpp  test_frame_counter_completeness_bonus.cpp  test_frame_counter_scoring.cpp  test_frame_counter_scoring_freestanding.cpp  test_frame_invalid.cpp  test_frame_spare.cpp  test_fuzz_invalid.cpp  test_fuzz_valid.cpp  test_game.cpp  tests_utils.hpp
